[package]
name = "sglib"
version = "0.1.0"
authors = ["niedzwiedzw <niedzwiedzwo@gmail.com>"]
edition = "2018"

[lib]
name = "sglib"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3"]
javascript_dev = ["console_error_panic_hook", "wasm-bindgen"]
javascript = ['javascript_dev', 'wee_alloc']
default = ["python"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.pyo3]
version = "0.9.1"
features = ["extension-module"]
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
